<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by the Dev Team for CSGO Skill.
  ~ Copyright (c) 2018. All rights reserved.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.flare_esports.csgoskill.SignupFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageBackground"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/mirage"
        tools:ignore="ContentDescription" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/signupView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/signupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:shadowColor="#CC000000"
            android:shadowDx="0.0"
            android:shadowDy="1.2"
            android:shadowRadius="8"
            android:text="@string/signup_title"/>

        <TextView
            android:id="@+id/signupText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:paddingHorizontal="11dp"
            app:layout_constraintTop_toBottomOf="@+id/signupTitle"
            android:text="@string/signup_text"
            android:textColor="@color/colorLightGrey"
            android:justificationMode="inter_word"
            android:textAlignment="center"
            android:textSize="16sp"
            android:shadowColor="#CC000000"
            android:shadowDx="0.0"
            android:shadowDy="1.2"
            android:shadowRadius="4"
            tools:ignore="UnusedAttribute" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/signupText"
            android:layout_marginTop="16dp"
            android:background="@color/roundedBoxBackground">

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <ImageView
                    android:id="@+id/avatarView"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"/>

                <ProgressBar
                    android:id="@+id/avatarLoader"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="60dp"
                    android:maxHeight="60dp"
                    android:minWidth="60dp"
                    android:minHeight="60dp"
                    app:layout_constraintStart_toStartOf="@id/avatarView"
                    app:layout_constraintEnd_toEndOf="@id/avatarView"
                    app:layout_constraintTop_toTopOf="@id/avatarView"
                    app:layout_constraintBottom_toBottomOf="@id/avatarView" />

                <TextView
                    android:id="@+id/personaView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/avatarView"
                    app:layout_constraintTop_toTopOf="@id/avatarView"
                    app:layout_constraintBottom_toBottomOf="@id/avatarView"
                    android:layout_marginStart="8dp"
                    android:text="@string/loading"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"/>

                <LinearLayout
                    android:id="@+id/signupForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/avatarView"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/personaInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/personaInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:maxLength="20"
                            android:inputType="textPersonName"
                            android:hint="@string/persona"
                            android:textColor="@color/colorBlack"
                            android:backgroundTint="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/usernameInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/usernameInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:maxLength="20"
                            android:inputType="textUri"
                            android:hint="@string/username"
                            android:textColor="@color/colorBlack"
                            android:backgroundTint="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/emailInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/emailInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"
                            android:textColor="@color/colorBlack"
                            android:backgroundTint="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/agreePolicy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            android:buttonTint="@color/colorBlack" />

                        <TextView
                            android:id="@+id/policyText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@+id/agreePolicy"
                            android:layout_marginStart="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0.4"
                            android:text="@string/tc_agreement"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />

                    </android.support.constraint.ConstraintLayout>

                    <Button
                        android:id="@+id/signupButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="32dp"
                        android:paddingEnd="32dp"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:text="@string/create"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:shadowColor="@color/shadowLight"
                        android:shadowDx="0.0"
                        android:shadowDy="1.2"
                        android:shadowRadius="16"
                        android:background="@color/colorPrimaryDark" />

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
