<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by the Dev Team for CSGO Skill.
  ~ Copyright (c) 2018. All rights reserved.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="net.flare_esports.csgoskill.IntroFrags.Frag2">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Track Your Performance"
        android:gravity="center"
        android:textSize="28sp"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/exampleChartHolderOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintBottom_toTopOf="@id/exampleChartHolderTwo"
        android:layout_marginBottom="25dp"
        app:layout_constraintDimensionRatio="H,16:7.5"
        app:layout_constraintVertical_chainStyle="packed"
        android:visibility="invisible">
        <TextView
            android:id="@+id/killsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kills"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="10sp"
            android:shadowColor="@color/shadowDark"
            android:shadowDx="0.0"
            android:shadowDy="1.2"
            android:shadowRadius="5"
            android:translationZ="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />
        <TextView
            android:id="@+id/deathsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:shadowColor="@color/shadowDark"
            android:shadowDx="0.0"
            android:shadowDy="1.2"
            android:shadowRadius="5"
            android:translationZ="5dp"
            app:layout_constraintTop_toBottomOf="@id/killsLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/example"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:alpha="0.05"
            android:rotation="20"
            android:gravity="center"
            android:translationZ="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/exampleChartHolderTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exampleChartHolderOne"
        app:layout_constraintBottom_toTopOf="@id/textDesc"
        app:layout_constraintDimensionRatio="H,16:7.5"
        android:visibility="invisible">
        <TextView
            android:id="@+id/winLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounds_won"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="10sp"
            android:shadowColor="@color/shadowDark"
            android:shadowDx="0.0"
            android:shadowDy="1.2"
            android:shadowRadius="5"
            android:translationZ="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />
        <TextView
            android:id="@+id/lossLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounds_lost"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:shadowColor="@color/shadowDark"
            android:shadowDx="0.0"
            android:shadowDy="1.2"
            android:shadowRadius="5"
            android:translationZ="5dp"
            app:layout_constraintTop_toBottomOf="@id/winLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/example"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:alpha="0.05"
            android:rotation="20"
            android:gravity="center"
            android:translationZ="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="Automatic daily updates and various charts let you see your daily performance and stats history."
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
